# SharedMath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cuda.yml
DSP/: CMakeLists.txt
DSP/include/DSP/: BurstDetection.h  CPUBackend.h  CUDABackend.h  Channelization.h  Convolution.h  FFT.h  FFTBackend.h  FFTConfig.h  FFTPlan.h  FFT_impl.h  FIR.h  FilterDesign.h  FilterResponse.h  FrequencyCorrection.h  Hilbert.h  IIR.h  PulseShaping.h  Resampling.h  STFT.h  Signal.h  SignalDetection.h  SignalEstimation.h  SignalGenerator.h  SignalMetrics.h  SignalProcessing.h  Spectral.h  Streaming.h  Waterfall.h  Window.h  dsp.h
DSP/src/: BurstDetection.cpp  CPUBackend.cpp  Channelization.cpp  Convolution.cpp  FFT.cpp  FFTPlan.cpp  FIR.cpp  FilterDesign.cpp  FilterResponse.cpp  FrequencyCorrection.cpp  Hilbert.cpp  IIR.cpp  PulseShaping.cpp  Resampling.cpp  STFT.cpp  Signal.cpp  SignalDetection.cpp  SignalEstimation.cpp  SignalGenerator.cpp  SignalMetrics.cpp  SignalProcessing.cpp  Spectral.cpp  Streaming.cpp  Waterfall.cpp  Window.cpp
Graphs/: CMakeLists.txt
Graphs/include/Graphs/: AVLTree.h  AdjacencyListGraph.h  BaseGraph.h  GraphAlgorithms.h  Graphs.h  GraphsAlg.h  GraphsAlg.tpp  UnionFind.h
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/include/LinearAlgebra/: AbstractMatrix.h  ComplexMatrix.h  ComplexVector.h  DefaultBinaryMatrixStrategies.h  DefaultScalarMatrixOperations.h  DefaultUnaryMatrixStrategies.h  DynamicMatrix.h  DynamicMatrixCUDA.h  DynamicVector.h  IterativeSolvers.h  LinearAlgebra.h  LinearSolver.h  Matrix.h  MatrixFunctions.h  MatrixOperationFactory.h  MatrixOperationsStrategy.h  PCA.h  SparseMatrix.h  Tensor.h  TensorCUDA.h  VectorN.h
LinearAlgebra/src/: ComplexMatrix.cpp  ComplexVector.cpp  DynamicMatrix.cpp  DynamicMatrixCUDA.cu  DynamicVector.cpp  IterativeSolvers.cpp  LUDecomposition.cpp  LinearSolver.cpp  MatrixFunctions.cpp  MatrixOperationFactory.cpp  MatrixOperations.cpp  MatrixView.cpp  PCA.cpp  SparseMatrix.cpp  Tensor.cpp  TensorCUDA.cu
ML/: CMakeLists.txt
ML/include/ML/: AutogradTensor.h  DataLoader.h  DimensionalityReduction.h  Loss.h  Metrics.h  ModelSelection.h  Models.h  Module.h  NaiveBayes.h  Optimizer.h  Preprocessing.h  RegularizedModels.h  SVM.h  Trainer.h  TreeModels.h  ml.h
ML/src/: AutogradTensor.cpp  DataLoader.cpp  Loss.cpp  ModelSelection.cpp  Models.cpp  Module.cpp  NaiveBayes.cpp  Optimizer.cpp  Preprocessing.cpp  RegularizedModels.cpp  SVM.cpp  Trainer.cpp  TreeModels.cpp
NumericalMethods/: CMakeLists.txt
NumericalMethods/include/NumericalMethods/: Differentiation.h  IntegralEquations.h  Integration.h  NonlinearEquations.h  NumericalMethods.h  NumericalMethodsGPU.h  ODE.h  SLAE.h
NumericalMethods/src/: Differentiation.cpp  IntegralEquations.cpp  Integration.cpp  NonlinearEquations.cpp  NumericalMethodsCUDA.cu  NumericalMethodsNLECUDA.cu  NumericalMethodsSLAECUDA.cu  ODE.cpp  SLAE.cpp
cmake/: export.h.in  project-config.cmake.in  utils.cmake
core/: CMakeLists.txt
core/include/: SharedMath.h  constans.h
core/include/core/: Cuda.h  CudaDeviceInfo.h  CudaDeviceManager.h  CudaDispatcher.h
core/src/: CudaDeviceManager.cpp  CudaDispatcher.cpp
docs/: CMakeLists.txt  Doxyfile.in  mainpage.dox
examples/: CMakeLists.txt  dsp_bandpass_filter  dsp_bandpass_filter.cpp  dsp_find_dominant_frequency  dsp_find_dominant_frequency.cpp  dsp_remove_hum  dsp_remove_hum.cpp  dsp_resample  dsp_resample.cpp  dsp_streaming_blocks  dsp_streaming_blocks.cpp
functions/: CMakeLists.txt
functions/include/functions/: Activations.h  GammaFunc.h  LossFunctions.h  SpecialFunctions.h  functions.h
functions/src/: GammaFunc.cpp
geometry/: CMakeLists.txt
geometry/include/geometry/: Algorithms.h  Angle.h  CoordinateSystem.h  Intersection.h  Line.h  Point.h  Transform2D.h  Transform3D.h  Vectors.h  geometry.h
geometry/include/geometry/Curves/: BezierCurve.h  Spline.h
geometry/include/geometry/Planimetry/: Arc.h  Circle.h  DynamicPolygon.h  Ellipse.h  Parallelogram.h  Polygon.h  Rectangle.h  RegularPolygon.h  Rhombus.h  Square.h  Trapezoid.h  Triangle.h
geometry/include/geometry/Stereometry/: Box.h  Cone.h  Cylinder.h  Plane3D.h  Sphere.h  Tetrahedron.h
geometry/src/: Algorithms.cpp  DynamicPolygon.cpp  Intersection.cpp  Parallelogram.cpp  Plane3D.cpp  Rectangle.cpp  Rhombus.cpp  Tetrahedron.cpp  Transform2D.cpp  Transform3D.cpp  Trapezoid.cpp  Triangle.cpp
include/: SharedMath.h  constans.h  sharedmath_functions_export.h  sharedmath_geometry_export.h  sharedmath_linearalgebra_export.h  sharedmath_numericalmethods_export.h
include/DSP/: dsp.h
include/Graphs/: BaseGraph.h  BinaryTree.h
include/LinearAlgebra/: DefaultBinaryMatrixStrategies.h  DynamicMatrix.h  (+12 more)
src/: CMakeLists.txt  SharedMath.cpp
src/DSP/: CMakeLists.txt
src/Graphs/: CMakeLists.txt
src/LinearAlgebra/: CMakeLists.txt  LUDecomposition.cpp  MatrixOperationFactory.cpp  MatrixOperations.cpp  MatrixView.cpp
src/core/: CMakeLists.txt
src/functions/: CMakeLists.txt  GammaFunc.cpp
src/geometry/: CMakeLists.txt  Parallelogram.cpp  Rectangle.cpp  Triangle.cpp
tests/: CMakeLists.txt  SharedMathTests  SharedMathTests.cxx  main.cpp  test_adjacency_list_graph.cpp  test_avl_tree.cpp  test_binary_tree.cpp  test_dsp_burst_detection.cpp  test_dsp_channelization.cpp  test_dsp_convolution.cpp  test_dsp_fft.cpp  test_dsp_filter_design_hz.cpp  test_dsp_filter_response.cpp  test_dsp_fir.cpp  test_dsp_frequency_correction.cpp  test_dsp_hilbert.cpp  test_dsp_iir.cpp  test_dsp_rbj_filters.cpp  test_dsp_resampling.cpp  test_dsp_signal.cpp  test_dsp_signal_detection.cpp  test_dsp_signal_estimation.cpp  test_dsp_signal_generator.cpp  test_dsp_signal_metrics.cpp  test_dsp_signal_processing.cpp  test_dsp_spectral.cpp  test_dsp_stft.cpp  test_dsp_streaming.cpp  test_dsp_waterfall.cpp  test_dsp_windows.cpp  test_dynamicmatrix_cuda.cpp  test_functions.cpp  test_geometry.cpp  test_geometry_circle.cpp  test_geometry_lines.cpp  test_geometry_polygon.cpp  test_geometry_rect.cpp  test_geometry_triangle.cpp  test_graph_algorithms.cpp  test_iterative_solvers.cpp  (+28 more)
(+18 files in other folders)
